Fixing track types
