# docs/swagger.yaml
@@ -77,7 +77,33 @@ definitions:
           $ref: '#/definitions/types.ApiArtist'
         type: array
     type: object
-  types.ApiGetTrackById:
+  types.ApiGetTrackByIdData:
+    properties:
+      albumId:
+        type: string
+      artistId:
+        type: string
+      bestQualityFile:
+        type: string
+      coverArt:
+        type: string
+      id:
+        type: string
+      mobileQualityFile:
+        type: string
+      name:
+        type: string
+      number:
+        type: integer
+    type: object
+  types.ApiGetTracksData:
+    properties:
+      tracks:
+        items:
+          $ref: '#/definitions/types.ApiGetTracksDataTrackItem'
+        type: array
+    type: object
+  types.ApiGetTracksDataTrackItem:
     properties:
       albumId:
         type: string
@@ -99,13 +125,6 @@ definitions:
         type: string
       number:
         type: integer
-    type: object
-  types.ApiGetTracksData:
-    properties:
-      tracks:
-        items:
-          $ref: '#/definitions/types.ApiTrack'
-        type: array
     type: object
   types.ApiPostAlbumData:
     properties:
@@ -131,11 +150,7 @@ definitions:
     properties:
       albumId:
         type: string
-      albumName:
-        type: string
       artistId:
-        type: string
-      artistName:
         type: string
       bestQualityFile:
         type: string
@@ -198,10 +213,10 @@ definitions:
         example: 200
         type: integer
     type: object
-  types.ApiResponse-types_ApiGetTrackById:
+  types.ApiResponse-types_ApiGetTrackByIdData:
     properties:
       data:
-        $ref: '#/definitions/types.ApiGetTrackById'
+        $ref: '#/definitions/types.ApiGetTrackByIdData'
       status:
         example: 200
         type: integer
@@ -242,11 +257,7 @@ definitions:
     properties:
       albumId:
         type: string
-      albumName:
-        type: string
       artistId:
-        type: string
-      artistName:
         type: string
       bestQualityFile:
         type: string
@@ -578,7 +589,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/types.ApiResponse-types_ApiGetTrackById'
+            $ref: '#/definitions/types.ApiResponse-types_ApiGetTrackByIdData'
         "400":
           description: Bad Request
           schema:
